--- a/main_project/src/pages/login/login.scss
+++ b/main_project/src/pages/login/login.scss
@@ -1,5 +1,20 @@
-.scroll-container	{
-   width: 2600px;
-   height: 1000px;
-   background: url('../img/world-map.png') no-repeat
+
+.video-container {
+    margin: 0;
+    padding-bottom: 75%;
+    max-width: 100%;
+    height: 0;
+    position: relative;
+    overflow: hidden;
+}
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
