--- a/main_project/src/pages/login/login.scss
+++ b/main_project/src/pages/login/login.scss
@@ -1,19 +1,22 @@
-.video-container {
+page-login {
+  .video-container {
     margin: 0;
-    padding-bottom: 75%;
+    padding-bottom: 85%;
     max-width: 100%;
     height: 0;
     position: relative;
     overflow: hidden;
-}
-.video-container iframe,
-.video-container object,
-.video-container embed {
+  }
+
+  .video-container embed,
+  .video-container iframe,
+  .video-container object {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
+    height: 500px;
     position: absolute;
     top: 0;
     left: 0;
+  }
 }
