--- a/main_project/src/app/app.scss
+++ b/main_project/src/app/app.scss
@@ -15,6 +15,6 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
-.activeHighLight{
-  background-color: map-get($colors, primary);
+.activeHeightlight{
+  background-color: map-get($colors, secondary);
 }
